force-app/main/default/objects/CFR_Attachment__c/CFR_Attachment__c.object-meta.xml
<CustomObject>
    <label>CFR Attachment</label>
    <nameField>
        <label>CFR Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFR Attachment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>