force-app/main/default/objects/CFR_Attachment__c/fields/Capital_Request_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Capital_Request_Attachment__c</fullName>
    <label>Capital Request Attachment</label>
    <referenceTo>Capital_Requests__c</referenceTo>
    <relationshipLabel>CFR Attachment</relationshipLabel>
    <relationshipName>CFR_Attachment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>