force-app/main/default/objects/CFR_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Models</fullName>
            </value>
            <value>
                <fullName>Vendor Quotes</fullName>
            </value>
            <value>
                <fullName>Project Justification</fullName>
            </value>
            <value>
                <fullName>Additional Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>Capital vs Operating Lease</fullName>
            </value>
            <value>
                <fullName>Project Completion Information</fullName>
            </value>
            <value>
                <fullName>Other - Please Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>